add new training network in GridWorld (trainer_2)

--- a/atari/cartpoleTest.ipynb
+++ b/atari/cartpoleTest.ipynb
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,26 +690,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.__version__ is 2.1.0\n",
-      "tf.keras.__version__ is: 2.2.4-tf\n",
-      "1 Physical GPUs, 1 Logical GPUs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import keras.backend.tensorflow_backend as tfback\n",
@@ -752,156 +735,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"model_3\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "input_3 (InputLayer)         (None, 4, 80, 80)         0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_7 (Conv2D)            (None, 32, 19, 19)        8224      \n",
-      "_________________________________________________________________\n",
-      "conv2d_8 (Conv2D)            (None, 64, 8, 8)          32832     \n",
-      "_________________________________________________________________\n",
-      "conv2d_9 (Conv2D)            (None, 64, 6, 6)          36928     \n",
-      "_________________________________________________________________\n",
-      "flatten_3 (Flatten)          (None, 2304)              0         \n",
-      "_________________________________________________________________\n",
-      "dense_9 (Dense)              (None, 512)               1180160   \n",
-      "_________________________________________________________________\n",
-      "dense_10 (Dense)             (None, 256)               131328    \n",
-      "_________________________________________________________________\n",
-      "dense_11 (Dense)             (None, 64)                16448     \n",
-      "_________________________________________________________________\n",
-      "dense_12 (Dense)             (None, 6)                 390       \n",
-      "=================================================================\n",
-      "Total params: 1,406,310\n",
-      "Trainable params: 1,406,310\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n",
-      "Model: \"model_4\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "input_4 (InputLayer)         (None, 4, 80, 80)         0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_10 (Conv2D)           (None, 32, 19, 19)        8224      \n",
-      "_________________________________________________________________\n",
-      "conv2d_11 (Conv2D)           (None, 64, 8, 8)          32832     \n",
-      "_________________________________________________________________\n",
-      "conv2d_12 (Conv2D)           (None, 64, 6, 6)          36928     \n",
-      "_________________________________________________________________\n",
-      "flatten_4 (Flatten)          (None, 2304)              0         \n",
-      "_________________________________________________________________\n",
-      "dense_13 (Dense)             (None, 512)               1180160   \n",
-      "_________________________________________________________________\n",
-      "dense_14 (Dense)             (None, 256)               131328    \n",
-      "_________________________________________________________________\n",
-      "dense_15 (Dense)             (None, 64)                16448     \n",
-      "_________________________________________________________________\n",
-      "dense_16 (Dense)             (None, 6)                 390       \n",
-      "=================================================================\n",
-      "Total params: 1,406,310\n",
-      "Trainable params: 1,406,310\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n",
-      "episode: 0/1000, score: 5.0\n",
-      "episode: 1/1000, score: -1.0\n",
-      "episode: 2/1000, score: 4.0\n",
-      "episode: 3/1000, score: 3.0\n",
-      "episode: 4/1000, score: 1.0\n",
-      "episode: 5/1000, score: -3.0\n",
-      "episode: 6/1000, score: 10.0\n",
-      "episode: 7/1000, score: 8.0\n",
-      "episode: 8/1000, score: 16.0\n",
-      "episode: 9/1000, score: 7.0\n",
-      "episode: 10/1000, score: 3.0\n",
-      "episode: 11/1000, score: -1.0\n",
-      "episode: 12/1000, score: 11.0\n",
-      "episode: 13/1000, score: 5.0\n",
-      "episode: 14/1000, score: 2.0\n",
-      "episode: 15/1000, score: -7.0\n",
-      "episode: 16/1000, score: 6.0\n",
-      "episode: 17/1000, score: 6.0\n",
-      "episode: 18/1000, score: -2.0\n",
-      "episode: 19/1000, score: 7.0\n",
-      "episode: 20/1000, score: 6.0\n",
-      "episode: 21/1000, score: -4.0\n",
-      "episode: 22/1000, score: 5.0\n",
-      "episode: 23/1000, score: -6.0\n",
-      "episode: 24/1000, score: 7.0\n",
-      "episode: 25/1000, score: -7.0\n",
-      "episode: 26/1000, score: -2.0\n",
-      "episode: 27/1000, score: 2.0\n",
-      "episode: 28/1000, score: 6.0\n",
-      "episode: 29/1000, score: 9.0\n",
-      "episode: 30/1000, score: 6.0\n",
-      "episode: 31/1000, score: 3.0\n",
-      "episode: 32/1000, score: 6.0\n",
-      "episode: 33/1000, score: 5.0\n",
-      "episode: 34/1000, score: 10.0\n",
-      "episode: 35/1000, score: -6.0\n",
-      "episode: 36/1000, score: 8.0\n",
-      "episode: 37/1000, score: -9.0\n",
-      "episode: 38/1000, score: -1.0\n",
-      "episode: 39/1000, score: 6.0\n",
-      "episode: 40/1000, score: 6.0\n",
-      "episode: 41/1000, score: 13.0\n",
-      "episode: 42/1000, score: 12.0\n",
-      "episode: 43/1000, score: 10.0\n",
-      "episode: 44/1000, score: 9.0\n",
-      "episode: 45/1000, score: -4.0\n",
-      "episode: 46/1000, score: -3.0\n",
-      "episode: 47/1000, score: 10.0\n",
-      "episode: 48/1000, score: 9.0\n",
-      "episode: 49/1000, score: 5.0\n",
-      "episode: 50/1000, score: -5.0\n",
-      "episode: 51/1000, score: 5.0\n",
-      "episode: 52/1000, score: 3.0\n",
-      "episode: 53/1000, score: 10.0\n",
-      "episode: 54/1000, score: -13.0\n",
-      "episode: 55/1000, score: -10.0\n",
-      "episode: 56/1000, score: 2.0\n",
-      "episode: 57/1000, score: 15.0\n",
-      "episode: 58/1000, score: 3.0\n",
-      "episode: 59/1000, score: -8.0\n",
-      "episode: 60/1000, score: 14.0\n",
-      "episode: 61/1000, score: 2.0\n",
-      "episode: 62/1000, score: 2.0\n",
-      "episode: 63/1000, score: 7.0\n",
-      "episode: 64/1000, score: 11.0\n",
-      "episode: 65/1000, score: 7.0\n",
-      "episode: 66/1000, score: 10.0\n",
-      "episode: 67/1000, score: 9.0\n",
-      "episode: 68/1000, score: 11.0\n",
-      "episode: 69/1000, score: 1.0\n",
-      "episode: 70/1000, score: 1.0\n",
-      "episode: 71/1000, score: 9.0\n",
-      "episode: 72/1000, score: -2.0\n",
-      "episode: 73/1000, score: 10.0\n",
-      "episode: 74/1000, score: 1.0\n",
-      "episode: 75/1000, score: 7.0\n",
-      "episode: 76/1000, score: -7.0\n",
-      "episode: 77/1000, score: -3.0\n",
-      "episode: 78/1000, score: 11.0\n",
-      "episode: 79/1000, score: 10.0\n",
-      "episode: 80/1000, score: 4.0\n",
-      "episode: 81/1000, score: 10.0\n",
-      "episode: 82/1000, score: 1.0\n",
-      "episode: 83/1000, score: 5.0\n",
-      "episode: 84/1000, score: 10.0\n",
-      "episode: 85/1000, score: 7.0\n",
-      "episode: 86/1000, score: 5.0\n",
-      "episode: 87/1000, score: 7.0\n",
-      "episode: 88/1000, score: 2.0\n",
-      "episode: 89/1000, score: 9.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Tutorial by www.pylessons.com\n",
     "# Tutorial written for - Tensorflow 1.15, Keras 2.2.4\n",
@@ -1259,11 +1093,11 @@
     "        \n",
     "        \n",
     "if __name__ == \"__main__\":\n",
-    "    #env_name = 'BreakoutDeterministic-v4'\n",
-    "    env_name = 'Pong-v0'\n",
+    "    env_name = 'BreakoutDeterministic-v4'\n",
+    "    #env_name = 'Pong-v0'\n",
     "    agent = DQNAgent(env_name)\n",
     "    #agent.run()\n",
-    "    agent.test('Models/Pong-v0DQN__CNN.h5')"
+    "    agent.test('Models/BreakoutDeterministic-v4DQN__CNN.h5')"
    ]
   },
   {
